# aidefend-mcp

./: .env.example  .gitignore  Dockerfile  IMPROVEMENTS_SUMMARY.md  INSTALL-繁體中文.md  INSTALL.md  README-繁體中文.md  README.md  SECURITY.md  __main__.py  docker-compose.yml  mcp_server.py  package-lock.json  package.json  parse_js_module.mjs  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh  test_3tier_classification.py  test_classify_simple.py  test_parser.py  verify_fix.sh
.github/workflows/: security.yml
app/: audit.py  config.py  core.py  logger.py  main.py  schemas.py  security.py  sync.py  threat_keywords.py  utils.py
app/tools/: __init__.py  classify_threat.py  code_snippets.py  compliance_mapping.py  coverage_analysis.py  defenses_for_threat.py  implementation_plan.py  quick_reference.py  statistics.py  technique_detail.py  threat_coverage.py  validation.py
docs/: README.md  SECURITY_FIX_RCE.md
scripts/: start.bat  start.sh  verify_fix.sh
tests/: test_3tier_classification.py  test_classify_simple.py  test_parser.py
