[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aidefend-mcp"
version = "1.0.0"
description = "Local RAG service for AIDEFEND AI security knowledge base with dual-mode support (REST API + MCP)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Edward Lee", email = "your.email@example.com"}
]
maintainers = [
    {name = "Edward Lee", email = "your.email@example.com"}
]
keywords = [
    "ai-security",
    "rag",
    "vector-search",
    "mcp",
    "model-context-protocol",
    "aidefend",
    "prompt-injection",
    "ai-defense",
    "lancedb",
    "fastembed"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "python-multipart==0.0.9",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "lancedb==0.5.7",
    "fastembed==0.2.6",
    "mcp==0.9.0",
    "httpx==0.26.0",
    "slowapi==0.1.9",
    "typing-extensions==4.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "safety>=2.3.5"
]

[project.urls]
Homepage = "https://github.com/edward-playground/aidefend-mcp"
Documentation = "https://github.com/edward-playground/aidefend-mcp#readme"
Repository = "https://github.com/edward-playground/aidefend-mcp"
"Bug Tracker" = "https://github.com/edward-playground/aidefend-mcp/issues"
Changelog = "https://github.com/edward-playground/aidefend-mcp/blob/main/CHANGELOG.md"

[project.scripts]
aidefend-mcp = "__main__:main"

[tool.setuptools]
packages = ["app"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt", "*.md"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | data
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["data/*", ".venv/*", "build/*", "dist/*"]

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "fastembed.*",
    "mcp.*",
    "slowapi.*"
]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/data/*"
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod"
]

# Bandit security checker configuration
[tool.bandit]
exclude_dirs = ["tests", "data", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used check (used in tests)
